fix visible scrollbar width adjustment

--- a/components-template-app/src/app/home/home.component.css
+++ b/components-template-app/src/app/home/home.component.css
@@ -18,7 +18,6 @@
     transform: none;
     visibility: visible;
     z-index: 2;
-    width: 265px;
     min-width: initial;
     background: 0 0;
     padding: 0 15px 0 0;
