--- a/components-template-app/src/app/side-bar/side-bar.component.css
+++ b/components-template-app/src/app/side-bar/side-bar.component.css
@@ -3,6 +3,7 @@
     box-sizing: content-box;
     display: block;
     margin: 0;
+    width: 260px;
 }
 
 .expansion-panel-header {
